differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr67784-1.c-4.8.2-2.out.txt
pr67784-1.c: In function ‘fn1’:
pr67784-1.c:10:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int T;;)
   ^
pr67784-1.c:10:3: note: use option -std=c99 or -std=gnu99 to compile your code
pr67784-1.c:13:6: error: ‘x’ undeclared (first use in this function)
   T *x;
      ^
pr67784-1.c:13:6: note: each undeclared identifier is reported only once for each function it appears in
pr67784-1.c: In function ‘fn2’:
pr67784-1.c:19:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int T;;)
   ^
pr67784-1.c:22:6: error: ‘x’ undeclared (first use in this function)
   T *x;
      ^
pr67784-1.c: In function ‘fn3’:
pr67784-1.c:28:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int T;;)
   ^
pr67784-1.c:32:6: error: ‘x’ undeclared (first use in this function)
   T *x;
      ^
pr67784-1.c: In function ‘fn4’:
pr67784-1.c:38:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int T;;)
   ^
pr67784-1.c:42:6: error: ‘x’ undeclared (first use in this function)
   T *x;
      ^
pr67784-1.c: In function ‘fn5’:
pr67784-1.c:48:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int T;;)
   ^
pr67784-1.c:53:6: error: ‘x’ undeclared (first use in this function)
   T *x;
      ^
